Set manifest attributes for bootJar

--- a/build.gradle
+++ b/build.gradle
@@ -38,4 +38,7 @@ test {
 
 bootJar {
     mainClass.set('com.mstar.paymentgateway.PaymentGatewayApplication')
+    manifest {
+        attributes 'Start-Class' : 'com.mstar.paymentgateway.PaymentGatewayApplication'
+    }
 }
