Refactor bootJar task for manifest

--- a/build.gradle
+++ b/build.gradle
@@ -38,4 +38,7 @@ test {
 
 bootJar {
     mainClassName('com.mstar.paymentgateway.PaymentGatewayApplication')
+    manifest {
+        attributes 'Start-Class': 'com.mstar.paymentgateway.PaymentGatewayApplication'
+    }
 }
