--- a/build.gradle
+++ b/build.gradle
@@ -36,9 +36,6 @@ test {
     useJUnitPlatform()
 }
 
-bootJar {
-    mainClassName('com.mstar.paymentgateway.PaymentGatewayApplication')
-    manifest {
-        attributes 'Start-Class': 'com.mstar.paymentgateway.PaymentGatewayApplication'
-    }
+jar {
+    enabled = false
 }
