Update application and production properties

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,1 +1,5 @@
+### SafeCharge ###
+safecharge.merchantId=${SFC_MERCHANT_ID}
+safecharge.siteId=${SFC_SECRET_KEY}
+safecharge.secretKey=${SFC_SITE_ID}
 
