Update production properties

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,4 +2,5 @@
 safecharge.merchantId=${SFC_MERCHANT_ID}
 safecharge.siteId=${SFC_SECRET_KEY}
 safecharge.secretKey=${SFC_SITE_ID}
+safeCharge=${safeCharge}
 
