Add Payoneer properties

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,4 +3,4 @@ safecharge.merchantId=${SFC_MERCHANT_ID}
 safecharge.siteId=${SFC_SECRET_KEY}
 safecharge.secretKey=${SFC_SITE_ID}
 safeCharge=${safeCharge}
-
+payoneer=${PAYONEER}
