Implement service method to obtain a listURL from Payoneer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ sfc.notificationURL=${sfc_dmn_url}
 ### Payoneer ###
 payoneer.merchantCode=${payoneer_merchant_code}
 payoneer.token=${payoneer_token}
+payoneer.listURLEndpoint=${payoneer_list_url_endpoint}
+payoneer.notificationURL=${payoneer_notify_url}
